force-app/main/default/objects/LLC_BI__Document_Collection_Index__c/LLC_BI__Document_Collection_Index__c.object-meta.xml
<CustomObject>
    <label>Document Collection Index</label>
    <nameField>
        <displayFormat>DCI-{0000000000}</displayFormat>
        <label>Document Collection Index Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Collection Indices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>