force-app/main/default/objects/LLC_BI__Document_Collection_Index__c/fields/LLC_BI__Document_Collection_Reference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Document_Collection_Reference__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is required. This field associates the Document Store record where the file is held.</description>
    <label>Document Collection</label>
    <referenceTo>LLC_BI__Document_Collection__c</referenceTo>
    <relationshipLabel>Document Collection Indices</relationshipLabel>
    <relationshipName>Document_Collection_Indices</relationshipName>
    <type>Lookup</type>
</CustomField>