force-app/main/default/objects/LLC_BI__Document_Collection_Index__c/fields/LLC_BI__Vendor_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Vendor_Document_Id__c</fullName>
    <description>This field is optional and is an identifier used by external vendor. For example, E-Signature document Id.</description>
    <externalId>true</externalId>
    <label>Vendor Document Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>